配置添加复制功能
Signed-off-by: 李永达 <liyongda@synqnc.com>

--- a/src/main/resources/templates/config/list.html
+++ b/src/main/resources/templates/config/list.html
@@ -29,6 +29,7 @@
 </blockquote>
 <script type="text/html" id="toolbar">
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="copy">复制</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script>const base = "[[@{/}]]";</script>
