--- a/src/main/resources/templates/config/add.html
+++ b/src/main/resources/templates/config/add.html
@@ -89,7 +89,8 @@
     </div>
 </fieldset>
 <script>const base = "[[@{/}]]";
-const id = [[${id}]];</script>
+const id = [[${id}]];
+const copy = [[${copy}]];</script>
 <script th:src="@{${@configInfo.layuiJs}}"></script>
 <script th:src="@{/js/common/common.js}"></script>
 <script th:src="@{/js/config/add.js}"></script>
